feat: adds total revenue of products
